--- a/lesson3/css/large.css
+++ b/lesson3/css/large.css
@@ -34,7 +34,7 @@ body {
 }
 header {
     padding: 20px;
-    background-color: #ED6B86;
+    background-color: violet;
     border-radius: 5px;
     box-shadow: 1px 1px 25px black;
 }
@@ -72,7 +72,8 @@ a:active {
     color: rgb(136, 81, 71);
 }
 footer {
-    background-color: #ED6B86;
+    background-color: violet;
+    color: white;
     position: relative;
     color: white;
     padding: 0.75em;
