--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -8,7 +8,7 @@ footer {
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-color: #681e2e;
+    background-color: violet;
     color: white;
 }
 
@@ -117,9 +117,9 @@ th {
 
 .sample1 {
     font-family: 'Montserrat', sans-serif;
-    background-color: #681e2e;
+    background-color: violet;
     color: white;
-    font-size: 30px;
+    font-size: 25px;
 }
 
 .sample2 {
@@ -132,13 +132,13 @@ th {
 
 .sample3 {
     font-family: 'Abel', sans-serif;
-    background-color: #7FB285	;
+    background-color: violet	;
     color: white;
     font-size: 25px;
 }
 
- .sample4 {
-    font-family: 'Abel Magic', sans-serif;
+ /* .sample4 {
+    font-family: 'Abel', sans-serif;
     color: black;
     font-size: 22px;
 }
@@ -153,8 +153,14 @@ th {
     font-family: 'Abel', sans-serif;
     color: black;
     font-size: 18px;
-}
+} */
 
 .colors {
     width: 100%;
 }
+
+/* h1.custom-heading {
+    color: #ffffff;
+    background-color: #ed6b86;
+  }
+   */
